# python-project-lvl4

./: Makefile  Procfile  README.md  pyproject.toml  requirements.txt
locale/en/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py
task_manager/templates/: base.html
task_manager/templates/components/: navbar.html
